almost finished front 2.0